general product selects one

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="As the top Natural Supplements and herbs Distributor, we offer
-            top-notch natural health products, swiftly delivered to your
-            doorstep at manufacturer-direct prices."
+      content="Your One-Stop General Merchandise Destination, your trusted partner for quality products and exceptional services."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -26,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Fenip Health & Food Care</title>
+    <title>Latte Impulse Solutions</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
